--- a/desafio 12.html
+++ b/desafio 12.html
@@ -12,6 +12,27 @@
     <link rel="stylesheet" href="style5.css">
 
 </head>
+
+<body>
+
+    <header class="bg-light header">
+        <section>
+            <span class="span-1">Aprenda</span>
+            <span class="span-2">Na Prática</span>
+            
+            <section class="links">
+                <a href="index.html">Inicio</a>
+                <a href="Polo.html">Escola Polo</a>
+                <a href="Professor.html">Professor</a>
+                <a href="Arquivos.html">Arquivos</a>
+                <a href="Exemplos.html">Jogos</a>
+            </section>
+        </section>
+    </header>
+
+    <link rel="stylesheet" href="style5.css">
+
+</head>
 <body>
     <h1>JavaScript Externo</h1>
     <button onclick="clique1()">Botão 1</button>
