--- a/desafio 14.html
+++ b/desafio 14.html
@@ -6,34 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Fluido</title>
     <style>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        .container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax (200px, 1fr));
+            gap: 10px;
+        }
 
-    <link rel="stylesheet" href="style5.css">
-
+        .item {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
-
-    <header class="bg-light header">
-        <section>
-            <span class="span-1">Aprenda</span>
-            <span class="span-2">Na Prática</span>
-            
-            <section class="links">
-                <a href="index.html">Inicio</a>
-                <a href="Polo.html">Escola Polo</a>
-                <a href="Professor.html">Professor</a>
-                <a href="Arquivos.html">Arquivos</a>
-                <a href="Exemplos.html">Jogos</a>
-            </section>
-        </section>
-    </header>
-
-
     <div class="container">
         <div class="item">Item 1</div>
         <div class="item">Item 2</div>
