--- a/desafio 14.html
+++ b/desafio 14.html
@@ -30,6 +30,21 @@
 </head>
 
 <body>
+
+    <header class="bg-light header">
+        <section>
+            <span class="span-1">Aprenda</span>
+            <span class="span-2">Na Prática</span>
+            
+            <section class="links">
+                <a href="index.html">Inicio</a>
+                <a href="Polo.html">Escola Polo</a>
+                <a href="Professor.html">Professor</a>
+                <a href="Arquivos.html">Arquivos</a>
+                <a href="Exemplos.html">Jogos</a>
+            </section>
+        </section>
+    </header>
     <div class="container">
         <div class="item">Item 1</div>
         <div class="item">Item 2</div>
