--- a/Exemplos.html
+++ b/Exemplos.html
@@ -18,6 +18,9 @@
             
             <section class="links">
                 <a href="index.html">Inicio</a>
+                <a href="Polo.html">Escola Polo</a>
+                <a href="Professor.html">Professor</a>
+                <a href="Arquivoss.html">Arquivos</a>
                 <a href="Exemplos.html">Jogos</a>
             </section>
         </section>
