--- a/Exemplos.html
+++ b/Exemplos.html
@@ -20,7 +20,7 @@
                 <a href="index.html">Inicio</a>
                 <a href="Polo.html">Escola Polo</a>
                 <a href="Professor.html">Professor</a>
-                <a href="Arquivoss.html">Arquivos</a>
+                <a href="Arquivos.html">Arquivos</a>
                 <a href="Exemplos.html">Jogos</a>
             </section>
         </section>
