--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="https://nvitoria200.github.io/teste/index.html">Inicio</a>
                 <a href="Polo.html">Escola Polo</a>
                 <a href="Professor.html">Professor</a>
-                <a href="Arquivoss.html">Arquivos</a>
+                <a href="Arquivos.html">Arquivos</a>
                 <a href="Exemplos.html">Jogos</a>
             </section>
         </section>
