--- a/desafio16.html
+++ b/desafio16.html
@@ -9,7 +9,11 @@
 <body>
     <div class="tela">
     <i class="fas fa-exclamation-circle"></i>
-    <i class="fas fa-check-circle"></i> 
+    <i class="fas fa-check-circle"></i>
+    </div>
+    <script
+            src="https://kit.fontawesome.com/f9e19193d6.js&quot; crossorigin="anonymous">
+    </script>
     <script src="./scripts.js"></script>
 </body>
 </html>
