--- a/desafio16b.html
+++ b/desafio16b.html
@@ -5,10 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
     <link rel="stylesheet" href="desafio16b.css">
 </head>
 
 <body>
+ 
+<header class="bg-light header">
+    <section>
+        <span class="span-1">Aprenda</span>
+        <span class="span-2">Na Prática</span>
+        
+        <section class="links">
+            <a href="https://nvitoria200.github.io/desafio/">Inicio</a>
+            <a href="">Escola Polo</a>
+            <a href="">Professor</a>
+            <a href="">Arquivos</a>
+            <a href="">Jogos</a>
+        </section>
+    </section>
+</header>
 
     <div class="thumbnails">
         <img class="peq" src="Modelo 2.png" alt="Imagem 1" data-index="0">
@@ -22,5 +42,6 @@
 
     <script src="script15.js"></script>
 </body>
+
 
 </html>
