--- a/desafio16b.html
+++ b/desafio16b.html
@@ -34,6 +34,9 @@
         <img class="peq" src="Modelo 2.png" alt="Imagem 1" data-index="0">
         <img class="peq" src="Mario2.jpg" alt="Imagem 2" data-index="1">
         <img class="peq" src="morris.webp" alt="Imagem 3" data-index="2">
+        <img class="peq" src="frozen.png" alt="Imagem 4" data-index="0">
+        <img class="peq" src="pr.png" alt="Imagem 5" data-index="1">
+        <img class="peq" src="images.png" alt="Imagem 6" data-index="2">
     </div>
 
     <div class="main-image">
