--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="bg-light header">
         <section>
             <span class="span-1">Aprenda</span>
-            <span class="span-2">Na Prática</span>
+            <span class="span-2">Na Prática</span>nicole.vitoria.pereira@escola.pr.gov.br
             
             <section class="links">
                 <a href="https://nvitoria200.github.io/teste/index.html">Inicio</a>
@@ -58,7 +58,7 @@
                                 <a href="desafio 14.html" class="btn btn-info link-a-1">Desafio 14</a>
                                 <a href ="desafio15.html" class="btn btn-info link-a-1">Desafio 15</a>
                                 <a href="desafio16.html" class="btn btn-info link-a-1">Desafio 16</a>
-                               <a href="desafio16b.html" class="btn btn-info link-a-1">Desafiob 16</a>
+                               <a href="desafio16b.html" class="btn btn-info link-a-1">Desafio 16b</a>
                         </section>
                     </div>
 
