--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="bg-light header">
         <section>
             <span class="span-1">Aprenda</span>
-            <span class="span-2">Na Prática</span>nicole.vitoria.pereira@escola.pr.gov.br
+            <span class="span-2">Na Prática</span>
             
             <section class="links">
                 <a href="https://nvitoria200.github.io/teste/index.html">Inicio</a>
