--- a/desafio16.html
+++ b/desafio16.html
@@ -9,7 +9,7 @@
       <section class="secao-1">
                             <h3>Prof. Robinho</h3>
                             <p></p>
-                                <a href="https://nvitoria200.github.io/teste/index.html" class="btn btn-info link-a-1">inicio</a>
+                                <a href="https://nvitoria200.github.io/desafio/" class="btn btn-info link-a-1">inicio</a>
                                
                         </section>
 </head>
