--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <a href ="desafio15.html" class="btn btn-info link-a-1">Desafio 15</a>
                                 <a href="desafio16.html" class="btn btn-info link-a-1">Desafio 16</a>
                                <a href="desafio16b.html" class="btn btn-info link-a-1">Desafio 16b</a>
-                               <a href="desafio 17.html" class="btn btn-info link-a-1">Desafio 17</a>
+                               <a href="Desafio 17.html" class="btn btn-info link-a-1">Desafio 17</a>
                                 <a href="desafio18.html" class="btn btn-info link-a-1">Desafio 17</a>
                         </section>
                     </div>
