--- a/desafio18.html
+++ b/desafio18.html
@@ -4,12 +4,7 @@
     <title>Cálculo de Reajuste Salarial</title>
     <link rel="stylesheet" href="desafio18.css">
    
-      <section class="secao-1">
-                            <h3>Prof. Robinho</h3>
-                            <p></p>
-                                <a href="https://nvitoria200.github.io/desafio/" class="btn btn-info link-a-1">inicio</a>
-                               
-                        </section>
+                           <button><a href=" https://nvitoria200.github.io/desafio/">Inicio</a></button>
 </head>
 <body>
     <div class="container">
