--- a/desafio19.html
+++ b/desafio19.html
@@ -3,7 +3,7 @@
 <head>
     <title>Cálculo de Reajuste Salarial</title>
     <link rel="stylesheet" href="desafio19.css">
-                           <button><a href=" https://nvitoria200.github.io/desafio/">Inicio</a></button>
+                    
 
 </head>
 <body>
@@ -22,7 +22,8 @@
             <input type="number" id="percentual" step="0.01">
         </div>
 
-        <button onclick="calcular()">Calcular</button>
+        <button onclick="calcular()">Calcular</button>     <button><a href=" https://nvitoria200.github.io/desafio/">Inicio</a></button>
+
         <p id="resultado"></p>
     </div>
 
