--- a/desafio18.html
+++ b/desafio18.html
@@ -4,7 +4,7 @@
     <title>Cálculo de Reajuste Salarial</title>
     <link rel="stylesheet" href="desafio18.css">
    
-                           <button><a href=" https://nvitoria200.github.io/desafio/">Inicio</a></button>
+                        
 </head>
 <body>
     <div class="container">
@@ -22,7 +22,7 @@
             <input type="number" id="percentual" step="0.01">
         </div>
 
-        <button onclick="calcular()">Calcular</button>
+        <button onclick="calcular()">Calcular</button>     <button><a href=" https://nvitoria200.github.io/desafio/">Inicio</a></button>
         <p id="resultado"></p>
     </div>
     
