--- a/Desafio 17.html
+++ b/Desafio 17.html
@@ -7,12 +7,12 @@
       <section class="secao-1">
                             <h3>Prof. Robinho</h3>
                             <p></p>
-                                <a href="https://nvitoria200.github.io/desafio/" class="btn btn-info link-a-1">inicio</a>
+                                <a href="https://nvitoria200.github.io/desafio/" class="btn btn-info link-a-1">Inicio</a>
                                
                         </section>
 </head>
 <body>
-    <h3>JOGOS QUE MARCARAM EPOCA</h3>
+    <h3>JOGOS QUE MARCARAM ÉPOCA</h3>
     <div class="container">     </div>
     <script src="Desafio 17.js"></script>
 </body>
