--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                                <a href="Desafio 17.html" class="btn btn-info link-a-1">Desafio 17</a>
                                 <a href="desafio18.html" class="btn btn-info link-a-1">Desafio 18</a>
                              <a href="desafio19.html" class="btn btn-info link-a-1">Desafio 19</a>
+                                 <a href="shampoo.html" class="btn btn-info link-a-1">Shampoo 1 </a>
+                                 <a href="shampoo copy.html" class="btn btn-info link-a-1">Shampoo 2</a>
                         </section>
                     </div>
 
