--- a/Bandeiras.html
+++ b/Bandeiras.html
@@ -14,9 +14,9 @@
         <h1>Página Criada pela IA</h1>
         <div class="gallery">
             <div class="thumbnail-container">
-                <img src="bandeira1.jpg" alt="Bandeira 1" class="thumbnail" onclick="ampliarImagem(this)">
-                <img src="bandeira2.jpg" alt="Bandeira 2" class="thumbnail" onclick="ampliarImagem(this)">
-                <img src="bandeira3.jpg" alt="Bandeira 3" class="thumbnail" onclick="ampliarImagem(this)">
+                <img src="bandeira1.png" alt="Bandeira 1" class="thumbnail" onclick="ampliarImagem(this)">
+                <img src="bandeira2.png" alt="Bandeira 2" class="thumbnail" onclick="ampliarImagem(this)">
+                <img src="bandeira3.png" alt="Bandeira 3" class="thumbnail" onclick="ampliarImagem(this)">
             </div>
             <div class="main-image">
                 <img id="ampliada" src="bandeira1.png">
@@ -75,7 +75,15 @@
     </footer>
 
     <script src="./Página Criada pela IA_files/desafio IA3.js.download"></script>
-
+    <script>
+        function ampliarImagem(imagem) {
+            var imagemAmpliada = document.getElementById('ampliada');
+            imagemAmpliada.src = imagem.src;
+        }
+        
+        // Função para exibir a data atual
+        document.getElementById('data').innerHTML = new Date().toLocaleDateString('pt-BR');
+        </script>
 
 </body>
 </html>
