--- a/shampoo.html
+++ b/shampoo.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <title>Troca de Imagem com Degradê</title>
+    <section class="secao-1">
+                            <h3>Prof. Robinho</h3>
+                            <p></p>
+                                <a href="https://nvitoria200.github.io/desafio/" class="btn btn-info link-a-1">Inicio</a>
+                               
+                        </section>
     <style>
         body {
             background: linear-gradient(to bottom right, orange, black);
